--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -4,10 +4,13 @@
   <%= f.label :email %>
   <%= f.text_field :email %>
 </p>
-
 <p>
   <%= f.label :password %>
   <%= f.text_field :password %>
+</p>
+<p>
+  <%= f.check_box :admin %>
+  <%= f.label :admin, "Is an admin?" %>
 </p>
   <%= f.submit %>
 <% end %>
